# python_experiment_containers

./: .gitignore  README.md  docker-compose.yml
.circleci/: config.yml
app/: Dockerfile  confirm_python_prepared.ipynb  confirm_pytorch_prepared.ipynb  pyproject.toml  pytorch_example.py  sklearn_example.ipynb
app/app_ml_basic/: sklearn_example.py
app/app_pytorch/: pytorch_example.py
app/tests/: test_pytorch_example.py  test_sklearn_example.py
db/: Dockerfile
