[tool.poetry]
name = "Python Experiment Containers"
version = "0.1.0"
description = "WIP"

authors = ["im"]

[tool.poetry.dependencies]
python = "^3.8"

numpy = "*"
pandas = "*"
sklearn = "*"
matplotlib = "*"
japanize-matplotlib = "*"
seaborn = "*"
jupyterlab = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-watch = "*"

[build-system]
requires = ["poetry_core>=1.0.10"]
build-backend = "poetry.masonry.api"
