[tool.poetry]
name = "Python Experiment Containers"
version = "0.1.0"
description = "WIP"

authors = ["im"]

[tool.poetry.dependencies]
python = "^3.8"

numpy = "1.19"
pandas = "1.1"
sklearn = "*"
matplotlib = "3.3"
japanize-matplotlib = "*"
seaborn = "0.11"
jupyterlab = "2.2"
torch = "1.6"
torchvision = "0.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-watch = "*"

[build-system]
requires = ["poetry_core>=1.0.10"]
build-backend = "poetry.masonry.api"
